refreshing anthologies on chapter relation creation and update (#2423)
This is the final part of Anthology-Chapter relation in database.
- Refreshing Anthology when it gets new relation

One thing we should consider now, if relation should be persisted for
published chapters only, or all chapters?
Otherwise Anthologies with non-published chapters will be shown as
"Anthologies with chapters" when searching in rettelisten